# greens_functions11

./: .gitmodules  CMakeLists.txt  README.md
extlib/: CMakeLists.txt  optimize_flags.patch
include/gf11/: GreensFunction2DAbsSym.cpp  GreensFunction2DAbsSym.hpp  GreensFunction2DRadAbs.cpp  GreensFunction2DRadAbs.hpp  GreensFunction3DAbsSym.cpp  GreensFunction3DAbsSym.hpp  GreensFunction3DRadAbs.cpp  GreensFunction3DRadAbs.hpp  GreensFunction3DRadInf.cpp  GreensFunction3DRadInf.hpp  SphericalBesselGenerator.hpp  config.hpp  factorial.hpp  find_root.hpp  gf_math.hpp  index_sequence.hpp  ipv_event_kind.hpp  sumup.hpp  throw_exception.hpp  tolerance.hpp  type_traits.hpp
src/: .gitignore  CMakeLists.txt  GreensFunction2DAbsSym.cpp  GreensFunction2DRadAbs.cpp  GreensFunction3DAbsSym.cpp  GreensFunction3DRadAbs.cpp  GreensFunction3DRadInf.cpp  Makefile  main.cpp
tests/: CMakeLists.txt  GreensFunction2DAbsSym.cpp  GreensFunction2DAbsSym_drawR.cpp  GreensFunction2DAbsSym_drawTime.cpp  GreensFunction2DRadAbs_drawR.cpp  GreensFunction2DRadAbs_drawTime.cpp  GreensFunction3DAbsSym.cpp  GreensFunction3DAbsSym_drawR.cpp  GreensFunction3DAbsSym_drawTime.cpp  GreensFunction3DRadAbs_drawR.cpp  GreensFunction3DRadAbs_drawTheta.cpp  GreensFunction3DRadAbs_drawTime.cpp  GreensFunction3DRadInf_drawR.cpp  GreensFunction3DRadInf_drawTime.cpp
